# GUI_University_Management_System

./: CMakeLists.txt  README.md  addstudent.cpp  addstudent.h  addstudent.ui  addteacher.cpp  addteacher.h  addteacher.ui  adminauthenticate.cpp  adminauthenticate.h  adminauthenticate.ui  admindes.cpp  admindes.h  admindes.ui  checkinfo.cpp  checkinfo.h  checkrecords.cpp  checkrecords.h  checkteacher.cpp  checkteacher.h  checkteacherinfo.cpp  checkteacherinfo.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  removestudent.cpp  removestudent.h  removestudent.ui  removeteacher.cpp  removeteacher.h  removeteacher.ui  struct.h  studentauthenticate.cpp  studentauthenticate.h  studentauthenticate.ui  studentdes.cpp  studentdes.h  studentdes.ui  studentexist.cpp  studentexist.h  (+13 more)
